# graphtries

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
example/: dir3.g6
example/graphs/: trrust.network.tsv
example/gtries/: dir3.gt  dir4.gt  dir5.gt
example/subgraphs/: dir4.g6  dir5.g6
src/: bitgraph.rs  census.rs  cli.rs  gtrie.rs  io.rs  isomorphism.rs  main.rs  node.rs  symmetry.rs
