[package]
name = "graphtries"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
fixedbitset = "0.4.2"
graph6-rs = "0.1.6"
petgraph = "0.6.3"
graph-canon = { path = "../graph-canon" }
itertools = "0.10.5"

[profile.release]
debug = true
