[package]
name = "graphtries"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
fixedbitset = { version = "0.4.2", features = ["serde"] }
graph6-rs = "0.1.6"
petgraph = "0.6.3"
graph-canon = "0.1.4"
itertools = "0.10.5"
clap = { version = "4.1.11", features = ["derive"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"

[profile.release]
debug = true
